proj1/tests/other-tests/minz-tests/correct/for_while.py
x = [1, 2, 3, 4, 5]
for item in x:
	i = 0
	while i < 5:
		print item
		i = i + 1
