proj1/tests/other-tests/minz-tests/error/bad_for_loop.py
x = [1, 2, 3]

for item in x
	print item

for item in :
	print item

for in x:
	print item
